src/assets/main.css
.dice-roller {
    position: relative;
    display: inline-block;
    cursor: pointer;
    margin: 0 0.25em 0 0;
}
.dice-roller > div {
    display: inline-block;
}
.dice-roller span {
    font-weight: bolder;
}
.dice-roller > .dice-roller-button {
    display: inline-block;
    position: relative;
    font-size: inherit;
    margin-left: 0.25em;
}

.dice-roller.has-embed .dice-roller-result {
    width: 100%;
    padding: 1rem;
}

.dice-roller.has-embed .dice-roller-result .markdown-embed {
    display: flex;
    margin-top: 0.5rem;
    padding-right: 0;
}

.dice-roller.has-embed .dice-roller-button {
    padding-top: 0.5rem;
}

.dice.tooltip {
    max-width: unset !important;
}
.workspace .markdown-preview-view .dice-roller.has-embed {
    display: flex;
    padding-right: 0.25rem;
    margin: 0.25rem 0;
}
.dice-no-results {
    font-style: italic;
    text-align: center;
}

.dice-roller.has-embed .internal-embed {
    width: 100%;
}

.dice-roller.has-embed
    .internal-embed
    *:last-child:not(svg):not(.dice-content-copy) {
    margin-bottom: 15px;
}

.dice-roller.has-embed .dice-file-name {
    font-style: italic;
}

.dice-section-result {
    position: relative;
}

.dice-content-copy {
    color: var(--text-faint);
    cursor: pointer;
    height: fit-content;
}
.dice-content-copy.no-show {
    display: none;
}

.dice-content-copy:hover {
    color: var(--text-normal);
}

.dice-roller.has-embed .dice-section-result .dice-content-copy,
.dice-content-copy:hover {
    opacity: 1;
}

.dice-roller-result {
    position: relative;
}

.dice-roller-settings .coffee {
    width: 60%;
    color: var(--text-faint);
    margin: 0.5rem auto;
    text-align: center;
}
.dice-roller-settings .coffee img {
    height: 30px;
}

/** Settings */
.dice-roller-setting-additional-container
    > .setting-item:not(.setting-item-heading) {
    border: 0px;
}

.dice-roller-setting-additional-container {
    border-bottom: 1px solid var(--background-modifier-border);
    border-top: 1px solid var(--background-modifier-border);
    padding: 18px 0;
}

.dice-roller-setting-additional-container > .setting-item-heading:only-child {
    padding-bottom: 18px;
}

.dice-roller-setting-additional-container > .additional .no-formulas {
    width: auto;
    display: block;
    text-align: center;
}
.dice-roller-setting-additional-container > .additional > .setting-item {
    border-top: 0;
    padding-top: 9px;
}
.dice-roller-setting-additional-container
    > .additional
    > .setting-item
    > .setting-item-control
    > *:first-child {
    margin: 0 6px;
}

.dice-roller-setting-additional-container .add-new-formula {
    margin: 0 1rem;
    padding: 1rem 1rem 0 1rem;
    border-radius: 0.5rem;
    box-shadow: 0 0 0.25rem var(--background-modifier-box-shadow);
}

.dice-roller-setting-additional-container
    .add-new-formula
    .formula-data
    .setting-item {
    border: 0;
}

